feat: Clean up default styles

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="Challenge your memory with this interactive game. Click each card only once to reveal its hidden content. Test your recall skills and aim to match all pairs. Play now for a fun and engaging experience!"
+    />
+    <link rel="shortcut icon" href="/favicon.svg" type="image/x-icon" />
+    <title>Memory Game</title>
   </head>
   <body>
     <div id="root"></div>
